# s3-manifest

./: Cargo.toml  README.md
data/batch/: manifest.json  manifest.json.md5
data/inventory/csv/: manifest.checksum  manifest.json
data/lens/: manifest.json
src/: batch.rs  inventory.rs  lens.rs  lib.rs
